--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #FFFFFF;
+  /* background: #FFFFFF; */
   font-family: 'Roboto', 'Arial' sans-serif;
   margin: 0;
 }
@@ -25,6 +25,7 @@ p {
   color: #6f7cb2;
   margin-top: 6px;
 }
+
 
 ul {
   list-style-type: none;
