--- a/css/header.css
+++ b/css/header.css
@@ -1,13 +1,28 @@
 .header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
+.header__menu {
+  display: none;
+  width: 32px;
+  cursor: pointer;
+}
+
+.header__menu>img {
+  max-width: 100%;
+}
+
 .header__title {
-  margin-right: 500px;
   font-weight: 900;
   font-size: 26px;
   color: #37447e;
+}
+
+.header__nav {
+  display: flex;
+  align-items: center;
 }
 
 .header__nav ul {
@@ -18,6 +33,10 @@
   line-height: 24px;
   font-size: 12px;
   margin-right: 60px;
+}
+
+.header__nav-item:hover {
+  text-decoration: underline;
 }
 
 .header__buttons {
@@ -35,4 +54,50 @@
   background: #FFD166;
   color: #111B47;
   margin-left: 26px;
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    position: fixed;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    background-color: white;
+    z-index: 10;
+  }
+  .header__menu {
+    display: block;
+  }
+  .header__buttons {
+    display: none;
+  }
+  .header__nav {
+    background: #e7ecff;
+    position: fixed;
+    top: 72px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin-top: 0;
+    clip-path: circle(0 at top left);
+    transition: clip-path 0.9s ease-in;
+  }
+  .header__nav.open {
+    clip-path: circle(1000px at top);
+  }
+  .header__nav ul {
+    flex-direction: column;
+    height: 100%;
+  }
+  .header__nav .header__nav-item {
+    margin-right: 0;
+    padding-left: 110px;
+    padding-top: 50px;
+    flex: 1;
+  }
+  .header__nav a {
+    font-weight: 500;
+    display: block;
+    font-size: 32px;
+  }
 }
