--- a/css/hero.css
+++ b/css/hero.css
@@ -2,12 +2,13 @@
   background-image: url(../img/Home.jpg);
   background-repeat: no-repeat;
   background-position: top 175px right -350px;
+  width: 50% right;
 }
 
 .hero__inner {
   padding-top: 120px;
   padding-bottom: 140px;
-  width: 540px;
+  width: 50%;
 }
 
 .hero__text {
@@ -19,13 +20,31 @@
   margin-top: 45px;
 }
 
+@media screen and (max-width: 375px) {
+  .hero__articles {
+    flex-direction: column;
+  }
+}
+
 .hero__article {
-  margin-right: 30px;
-  width: 255px;
+  width: 50%;
 }
 
 .hero__article-paragraph {
   font-size: 12px;
   line-height: 18px;
   color: #5D6970;
+}
+
+@media screen and (max-width: 1360px) {
+  .hero {
+    background-image: none;
+  }
+  .hero__inner {
+    width: 100%;
+    padding-bottom: 75px;
+  }
+  .hero__article {
+    width: 100%;
+  }
 }
