--- a/css/header.css
+++ b/css/header.css
@@ -101,3 +101,14 @@
     font-size: 32px;
   }
 }
+
+@media screen and (min-width: 2000px) {
+  .header__title{
+    font-size: 40px;
+  }
+  .header__buttons{
+    width: 150px;
+    height: 25px;
+    font-size: 20px;
+  }
+}
